manifests/ngrok-ingress-controller/ingress_examples.yaml
# Applying this manifest will make the service "argocd-server"
# available on the public internet e.g. "https://argocd-server-1RREE44E.ngrok.app/".

# Once done, view your edges in the Dashboard https://dashboard.ngrok.com/cloud-edge/edges
# Find the tunnels running in your cluster here https://dashboard.ngrok.com/tunnels/agents
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argocd-server
  namespace: argocd
spec:
  ingressClassName: ngrok
  rules:
  - host: argocd-server-oXmxQtZX.ngrok.app
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: argocd-server
            port:
              number: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argocd-server
  namespace: argocd
spec:
  ingressClassName: ngrok
  rules:
  - host: argocd-server-1UaV658H.ngrok.app
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: argocd-server
            port:
              number: 443
